--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,8 @@
 
 
 body {
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color:#F3F3F3;
   color: rgba(0, 0, 0, .65);
   font-size: 28px;
   font-variant: tabular-nums;
